# swagger-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  vcpkg.json
.github/workflows/: ci.yml  conan-publish.yml  docs.yml  release.yml  vcpkg-publish.yml  vcpkg-registry.yml
benchmarks/: parse_benchmarks.cpp
cmake/: swaggercpp.pc.in  swaggercppConfig.cmake.in
docs/: README.md  architecture.md  guide.md  index.md  install.md  package-lock.json  package.json  quick-start.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/api/: document.md  index.md  reader.md  result.md  ui.md  validator.md  walker.md  writer.md
docs/examples/: build-from-code.md  endpoint-catalog.md  index.md  mutate-document.md  parse-json.md  parse-yaml.md  roundtrip.md  serve-ui.md  traverse-document.md  validate-document.md
docs/packaging/: cmake-package.md  conan.md  fetchcontent.md  index.md  vcpkg.md
docs/superpowers/specs/: 2026-04-15-registry-prs-design.md
examples/: build_petstore.cpp  load_validate.cpp  mutate_document.cpp  serve_ui.cpp
include/swaggercpp/: document.hpp  export.hpp  reader.hpp  result.hpp  swaggercpp.hpp  ui.hpp  validator.hpp  walker.hpp  writer.hpp
packaging/conan/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
packaging/conan/test_package/src/: example.cpp
packaging/vcpkg/ports/swaggercpp/: vcpkg.json
packaging/vcpkg/registry/: baseline.json
packaging/vcpkg/registry/ports/swaggercpp/: portfile.cmake  vcpkg.json
packaging/vcpkg/registry/versions/s-/: swaggercpp.json
scripts/: run-benchmarks.ps1  test-vcpkg-port.ps1  update-vcpkg-registry.ps1
src/: document.cpp  reader.cpp  ui.cpp  validator.cpp  walker.cpp  writer.cpp
src/detail/: json_utils.cpp  json_utils.hpp  yaml_utils.cpp  yaml_utils.hpp
tests/: reader_tests.cpp  ui_tests.cpp  validator_tests.cpp  writer_tests.cpp
